# solr_proxy

./: .gitignore  Cargo.toml  README.md
src/: get_local_ip.rs  main.rs  proc_xml.rs  setting_log.rs  solr.rs  util.rs  xml_attr_parser.rs  xml_doc.rs
