[package]
name = "solr_proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
log = "0.4"
log4rs = { version = "1" }
local-ip-address = "0.5"
quick-xml = { version = "0.28"}
hashbrown = "0.13"
smallvec = "1"
lru = "0.10"
regex = "1"
once_cell = "1"
config = "0.13"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "mysql" ] }
#ouroboros = "0.15"

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
panic = 'abort'